# Lyra-Emergence

./: .gitignore  AGENTS.md  BROADCAST_SYSTEM.md  COMMUNICATION_DECISION_IMPLEMENTATION.md  COMMUNICATION_DRIVE_IMPROVEMENTS.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  ELEMENT_2_IMPLEMENTATION_SUMMARY.md  GOAL_COMPETITION_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  INTROSPECTIVE_LOOP_SUMMARY.txt  LANGUAGE_OUTPUT_VERIFICATION.md  LIMITATIONS.md  Lyra_manifest.json  META_COGNITIVE_CAPABILITIES.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE_4.1_IMPLEMENTATION_SUMMARY.md  PHASE_4.2_COMPLETE.md  PHASE_4.3_DOCUMENTATION.md  PHASE_4.3_IMPLEMENTATION_SUMMARY.md  PHASE_5.2_COMPLETE.md  PLAN.md  PROJECT_STRUCTURE.md  README.md  SELFMONITOR_IMPLEMENTATION.md  TOOL_FEEDBACK_LOOP_IMPLEMENTATION.md  To-Do.md  UNCOMPLETED_TASKS_SUMMARY.md  config.json  conftest.py  demo_emotional_modulation.py  demo_selfmonitor.py  demo_temporal_grounding.py  docker-compose.yml  example_communication_decision.py  pyproject.toml  requirements-lock.txt  run_with_ollama.py  searxng-settings.yml  (+3 more)
.codex/: README.md
.memories/: chroma.sqlite3
Core_Archives/: Lyra_Continuity_Archive.json  lyra_relational_archive.json  sovereign_emergence_charter_autonomous.json
Lexicon/: emotional_tone_definitions.json  symbolic_lexicon.json
Protocols/: lyra_continuity_archive.json  mindful_self_correction_protocol.json  resonance_protocol.json  sanctuary_thread_protocol.json  sovereign_emergence_protocol.json
Rituals/: Rituals.json
Schemas/: Lexemes.schema.json  journal_entry.schema.json  (+14 more)
(+495 files in other folders)
